# rust-auth-microservice

./: .env  Cargo.toml
migrations/: 0001_create_oauth_access_tokens_table.sql
src/domain/entities/: token.rs  user.rs
src/presentation/web/: main.rs  routes.rs
