[package]
name = "rust-auth-microservice"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-auth-microservice"
path = "src/presentation/web/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono"] }
